--- a/Canvas/gradient.html
+++ b/Canvas/gradient.html
@@ -36,13 +36,13 @@
             var c = document.getElementById("myCanvas1");
             var ctx = c.getContext("2d");
             // Create gradient
-            var grd = ctx.createRadialGradient(75, 50, 5, 90, 60, 100);
+            var grd = ctx.createRadialGradient(75, 50, 100, 75, 50, 10);
             // grd.addColorStop(0, "red");
             // grd.addColorStop(1, "white");
             grd.addColorStop(0, "red");
             grd.addColorStop(0.3, "yellow");
             grd.addColorStop(0.5, "green");
-            grd.addColorStop(1, "white");
+            grd.addColorStop(1, "pink");
             // Fill with gradient
             ctx.fillStyle = grd;
             ctx.fillRect(10, 10, 150, 80);
